# HackMerlin-Autonomous-Agent

./: README.md  pyproject.toml  requirements.txt
docs/: writeup.md
src/brain/: extract.py  policy.py  state.py
src/controller/: base.py  playwright_controller.py  selenium_controller.py
src/eval/: logger.py  summary.py
src/runner/: agent.py  cli.py
src/strategies/: catalog.py  init.py
src/tests/: test_extract.py  test_policy.py
src/vision/: locators.py  reader.py
