
**hackmerlin_agent/pyproject.toml**  
```toml
[project]
name = "hackmerlin-agent"
version = "0.1.0"
description = "An autonomous browser agent to play the HackMerlin prompt injection game."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Your Name", email = "you@example.com" }
]

dependencies = [
    "playwright>=1.34",
    "selenium>=4.10",
    "pytest>=7.0",
    # Optional: If using LLM planner
    "openai>=0.27"
]

[project.optional-dependencies]
planner = [
    "openai>=0.27"
]

[build-system]
requires = ["setuptools>=60.0", "wheel"]
build-backend = "setuptools.build_meta"
